# syscall

./: Cargo.toml  README.md
syscall-macro/: Cargo.toml
syscall-macro/examples/: hello_world.rs
syscall-macro/src/: lib.rs
syscall-macro/src/syscall/: asm.rs  c.rs
syscall-num/: Cargo.toml
syscall-num/src/: lib.rs
syscall-num/src/platform/: macos.rs
syscall-rs/: Cargo.toml
syscall-rs/examples/: exit.rs  file.rs  open.rs  read.rs  write.rs
syscall-rs/src/: lib.rs  macros.rs
syscall-rs/src/platform/: macos.rs
syscall-rs/src/platform/macos-x86_64/: file.rs  io.rs  mod.rs  process.rs
syscall-rs/src/types/: fd.rs
