[package]
name = "syscall-macro"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
asm = []

[dev-dependencies]
syscall-num = { version = "0.1", path = "../syscall-num" }

[[example]]
name = "hello_world"
