[package]
name = "syscall-rs"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall-macro = { version = "0.1", path = "../syscall-macro" }
syscall-num = { version = "0.1", path = "../syscall-num" }

[features]
asm = ["syscall-macro/asm"]

[dev-dependencies]
bytes = "0.5"
